# Livyonn

./: .gitignore  CMakeLists.txt  CMakePresets.json  NotepadppSyntax.xml  README.md  build.sh  compile_commands.json  debug_run.sh  gmon.out  init.vim  main.cpp  run.sh  skript.sh
.cache/clangd/index/: AVM.cpp.1DBFE29730502818.idx  AVM.h.53508626F24FDBBF.idx  Analyzer.cpp.0E65CFA13C8B238A.idx  Analyzer.cpp.D0A678BC591A0DCB.idx  Analyzer.h.596821B4D02CF0C5.idx  Analyzer.h.C8979E4E14830512.idx  ByteBuffer.cpp.E29B784DC2C60BFB.idx  ByteBuffer.h.1D48E969C11E0336.idx  Compiler.cpp.C35ACDFD898A9B10.idx  Compiler.cpp.CC45FC04ABEB7725.idx  Compiler.h.A5085B52FA328B4F.idx  Compiler.h.A8AABDA450E5A3C2.idx  Define.h.351E4753A35FD2DD.idx  FunctionDefinition.cpp.16A8779B1CCA0308.idx  FunctionDefinition.h.DF4FD4F370E4D183.idx  Instruction.h.7A12DC3518F26251.idx  Lexer.cpp.69A309EBD1D86EB7.idx  Lexer.cpp.DB8207A671DB7346.idx  Lexer.h.7EDFFF9F56FA74BF.idx  Lexer.h.8952A3040C963A89.idx  Registers.cpp.15273F60B28583CE.idx  Registers.h.3C83A1DA13E83BA9.idx  Runtime.cpp.1104588C35D10877.idx  Runtime.h.7FB0108A11FBD25D.idx  Type.h.6CEC1B4D0D221B3A.idx  (+5 more)
Test/: HL_Analyzer_Example.arm  HL_Sample.am  HL_Sample.arm  MC_Sample.amc  TODO.txt  awfulAgeCounter.arm  bak.bak  basic.amc  basic.arm  out.aex  test1.amc  test1.arm  test2.amc  test2.arm
Test/css/: Program.cs
src/: CMakeLists.txt  main.cpp  main.cpp.bak
src/Analyzer/Armavir/include/: Lexer.h  Type.h
src/Analyzer/Armavir/src/: FunctionDefinition.cpp  Statement.cpp
src/Analyzers/AVM/: Analyzer.cpp  Lexer.cpp
src/Analyzers/AVM/include/: Analyzer.h  Lexer.h
src/Analyzers/AVM/src/: Analyzer.cpp  Lexer.cpp
src/Analyzers/Armavir/: Analyzer.cpp  FunctionDefinition.cpp  Lexer.cpp  Statement.cpp
src/Analyzers/Armavir/include/: Analyzer.h  FunctionDefinition.h  Lexer.h  Statement.h
src/Analyzers/Armavir/src/: Analyzer.cpp  Lexer.cpp  Statement.cpp
src/Compilers/AVM/: Compiler.cpp
src/Compilers/AVM/include/: AVM.h  ByteBuffer.h  Compiler.h  Instruction.h  Registers.h  Runtime.h
src/Compilers/AVM/src/: AVM.cpp  ByteBuffer.cpp  Compiler.cpp  Registers.cpp  Runtime.cpp
src/Compilers/Armavir/: Compiler.cpp
src/Compilers/Armavir/include/: ARC.h  Compiler.h
src/Compilers/Armavir/src/: Compiler.cpp
src/Lib/: System.cpp  Utils.cpp
src/Lib/include/: Define.h  System.h  Utils.h
src/Lib/src/: Utils.cpp
src/Runtime/AVM/: AVM.cpp  ByteBuffer.cpp  Registers.cpp  Runtime.cpp  Runtime.old.cpp
src/Runtime/AVM/include/: AVM.h  ByteBuffer.h  Instruction.h  Registers.h  Runtime.h
src/Runtime/AVM/src/: AVM.cpp  ByteBuffer.cpp  Runtime.cpp
src/Runtime/AVM/test/: a.out  main.cpp
src/liv.dir/Debug/: liv.exe.recipe
src/liv.dir/Debug/liv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  liv.lastbuildstate
